--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-443.0KB/s(Youtube:不良林), server: svip02.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.04MB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35079, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-258.0KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-174.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65091, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇨🇳 中国-158.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-197.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇯🇵 日本-283.6KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: svip01.01download.xyz, port: 35077, type: vmess, uuid: 70b16905-4706-3b4a-8f27-bdd2a74bf432, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-443.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-174.3KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-158.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-197.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-283.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
