--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-763.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.99MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林), server: 185.167.116.252, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇨🇳 中国-582.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-176.7KB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.91MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.80MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.01MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-2.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林), server: 213.183.53.212, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-1.59MB/s(Youtube:不良林), server: 213.183.59.229, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇫🇷 法国-1.30MB/s(Youtube:不良林), server: 149.202.82.172, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇫🇷 法国-2.59MB/s(Youtube:不良林), server: 145.239.1.100, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.41MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-509.8KB/s(Youtube:不良林), server: 213.183.59.229, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇳🇱 荷兰-1.29MB/s(Youtube:不良林), server: 213.183.51.171, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-3.37MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-1.84MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-763.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-582.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-176.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.80MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.01MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.03MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.61MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.59MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.41MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-509.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.29MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.84MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
